--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+*,
+*:before,
+*:after {
+  @apply cursor-default;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
