--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,10 +9,12 @@
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
+  cursor: url('/logo/cursor.svg'), default;
   width: 15px;
 }
 
 *::-webkit-scrollbar-track {
+  cursor: url('/logo/cursor.svg'), default;
   background: white;
   border-radius: 0;
   /* background: var(--primary); */
@@ -20,6 +22,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
+  cursor: url('/logo/cursor.svg'), default;
   background-color: red;
   /* background-color: var(--secondary); */
   border-radius: 0;
