--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,14 @@
   width: 100%;
 }
 
+#video {
+  /* position: fixed; */
+  z-index: -99;
+  width: 100%;
+  height: 100%;
+  top: 0; right: 0; bottom: 0; left: 0;
+}
+
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   cursor: url('/logo/cursor.svg'), default;
