--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
   /* scrollbar-color: var(--secondary) var(--primary); */
 }
 
-#header {
+#headers {
   position: fixed;
   top: 0;
   width: 100%;
